# reliq

./: Cargo.toml  readme.md  s.ts
benches/: q.rs
src/: e.rs  float.rs  int.rs  lib.rs  map.rs  num.rs  utf8.rs
src/array/: builder.rs  const_builder.rs  handle.rs  ink.rs  iter.rs  mod.rs  tracker.rs
src/color/: _.rs  e.rs  engine.rs  error.rs  hex.rs  hsl.rs  hsla.rs  mod.rs  mode.rs  rgb.rs  rgba.rs
src/common/: mod.rs
src/coordinate/: mod.rs  point2d.rs
src/coordinate/point2d/: mod.rs
src/coordinate/point3d/: mod.rs
src/coordinate/point4d/: alias.rs  mod.rs
src/coordinate/pointn/: mod.rs
src/e/: mod.rs
src/ink/: mod.rs
src/lossy/: mod.rs
src/map/: hasher.rs  key.rs  mod.rs  val.rs
src/math/: linear_reg.rs  mod.rs
src/num/: bits.rs  bound.rs  checked.rs  checked_div.rs  checked_shl.rs  float.rs  int.rs  mod.rs  overflowing_add.rs  overflowing_div.rs  overflowing_shl.rs  prim.rs  prim_int_conversion.rs  sign.rs  signed.rs
src/ops/: checked.rs  checked2.rs  from_prim.rs  mod.rs  overflowing.rs  pow.rs  prim.rs  quick_access.rs  root.rs  sign.rs  signed.rs  to_prim.rs  to_prim_float.rs  to_prim_int.rs  to_sign.rs  trig.rs  unsigned.rs  wrapping.rs
src/ops/checked/: add.rs  mod.rs  mul.rs  neg.rs  rem.rs  shr.rs  sub.rs
src/ops/conversion/: float.rs
src/ops/metadata/: bits.rs  bound.rs  quick_access.rs  unsigned.rs
src/ops/overflowing/: mod.rs  mul.rs  neg.rs  rem.rs  shr.rs  sub.rs
src/point/: error.rs  mod.rs  set.rs  ty.rs
src/prediction_model/: mod.rs
src/prim/: i.rs  mod.rs  num.rs
src/prim/angle/: deg.rs  mod.rs  rad.rs
src/q/: arithmetic.rs  as.rs  cardinal.rs  cast.rs  chance.rs  clone.rs  core.rs  core_fmt.rs  default_mode.rs  deg.rs  deg_mode.rs  delta.rs  engine.rs  eq.rs  error.rs  factor.rs  fmt.rs  fold.rs  fragment.rs  from.rs  lerp.rs  mod.rs  mode.rs  muldiv.rs  n.rs  ord.rs  partial.rs  percentage.rs  pi.rs  precision.rs  rad.rs  rad_mode.rs  rate.rs  ratio.rs  round.rs  scale.rs  scale_compatible.rs  sign.rs  sqrt.rs  supported.rs  (+5 more)
src/qq/: arithmetic.rs  from.rs  lerp.rs  mod.rs  muldiv.rs  result.rs  supported.rs
src/rand/: mod.rs
src/timestamp/: duration.rs  mod.rs
src/utf8/: mod.rs
(+13 files in other folders)
