[package]
name = "reliq"
description = "A portable library of primitive-like constructs."
version = "0.2.2"
edition = "2024"
license = "Apache-2.0"
readme = "readme.md"
publish = true
keywords = [
    "arithmetic",
    "math",
    "portable"
]

[dependencies]
modwire = { version = ">=0.1.0,<1.0.0" }
paste = { version = ">=1.0.15,<2.0.0" }
scale = { version = "3", package = "parity-scale-codec", default-features = false, optional = true }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }
ink = { version = "4", default-features = false, optional = true }

[dev-dependencies]
criterion = { version = ">=0.7.0,<1.0.0" }
rstest = { version = ">=0.26.1,<1.0.0" }

[features]
default = []
ink = [
    "dep:ink",
    "dep:scale",
    "dep:scale-info"
]

[[bench]]
name = "q"
harness = false