[package]
name = "reliq"
description = "A portable library of primitive-like constructs."
edition = "2024"
license = "Apache-2.0"
publish = true
keywords = ["arithmetic", "math", "portable"]
version = "0.1.0"

[dependencies]
modwire = { version = ">=0.1.0,<1.0.0" }
paste = { version = ">=1.0.0,<2.0.0" }
serde = { version = ">=1.0.0,<2.0.0", features = ["derive"] }
thiserror = { version = ">=2.0.0,<3.0.0" }
strum = { version = ">=0.1.0,<1.0.0", default-features = false }
strum_macros = { version = ">=0.1.0,<1.0.0" }

[dev-dependencies]
criterion = { version = ">=0.1.0,<1.0.0" }
rstest = { version = ">=0.1.0,<1.0.0" }

[features]
default = ["std"]
std = []

[[bench]]
name = "q"
harness = false